[gd_scene load_steps=4 format=3 uid="uid://byymkb75eqjrp"]

[ext_resource type="Script" path="res://entities/bullet.gd" id="1_io5gd"]
[ext_resource type="Texture2D" uid="uid://c46fqsh6bkg8y" path="res://Textures/bullet.png" id="1_n0lfg"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gujoe"]
radius = 16.0312

[node name="Bullet" type="CharacterBody2D"]
collision_layer = 0
collision_mask = 0
safe_margin = 0.001
script = ExtResource("1_io5gd")

[node name="Bullet" type="Sprite2D" parent="."]
texture = ExtResource("1_n0lfg")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_gujoe")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_gujoe")

[node name="ActiveTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="ActiveTimer" to="." method="_on_timer_timeout"]
